--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^24.0.10",
     "react-router-dom": "^7.6.3"
   }
 }
